--- a/schliffs/fischer/P9-2.yaml
+++ b/schliffs/fischer/P9-2.yaml
@@ -1,30 +1,26 @@
 name: P9-2
-description:
+description: null
 description_ru: влажный снег, t выше 0
-website_url:
-
+website_url: null
 snow_type:
   - wet
 snow_temperature:
   - min: 0
     max: null
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - влажный снег
   - плюсовая температура
-
 similars:
   - Р3-1
   - S13-5
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
