--- a/schliffs/madshus/M61F2.yaml
+++ b/schliffs/madshus/M61F2.yaml
@@ -1,8 +1,8 @@
 name: M61F2
-description:
-description_ru: новая мелкая структура для холодного и сухого снега при температуре от -6 и холоднее
+description: null
+description_ru: новая мелкая структура для холодного и сухого снега при температуре
+  от -6 и холоднее
 website_url: https://www.skisport.ru/forum/commercial-offers-of-partners/104563/
-
 snow_type:
   - dry
   - frozen
@@ -10,23 +10,20 @@ snow_temperature:
   - min: -25
     max: -6
 condition: green
-manufactory: "Madshus"
-house: "Madshus"
-author: ""
-country: "Norway"
-
+manufactory: Madshus
+author: ''
+country: Norway
 tags:
   - сухой снег
   - трансформированный
   - перемороженый
-
 similars:
   - G1
   - B227
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: Madshus
