--- a/schliffs/marsport/M100.yaml
+++ b/schliffs/marsport/M100.yaml
@@ -1,34 +1,31 @@
 name: M100
-description:
-description_ru: структура для высокой влажности и свежего снега, подходит под глянец, температура от 0 до -10
+description: null
+description_ru: структура для высокой влажности и свежего снега, подходит под глянец,
+  температура от 0 до -10
 website_url: https://marsport.ru/service
-
 snow_type:
   - fresh
 snow_temperature:
   - min: -10
     max: 0
 condition: blue
-manufactory: ""
-house: "MarSport"
-author: "Alexandr Veselov "
-country: "Россия"
-
+manufactory: ''
+author: 'Alexandr Veselov '
+country: Россия
 tags:
   - свежий снег
   - высокая влажность
   - глянец
-
 similars:
   - P5-1
   - S12-16
   - B2211
   - SV77
   - X25
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: MarSport
