--- a/schliffs/svecky/VT322.yaml
+++ b/schliffs/svecky/VT322.yaml
@@ -1,7 +1,6 @@
 name: VT322
 description: Classic skiing structure for fine-grained and fresh snow
 description_ru: Структура для классики на мелкозернистый и свежий снег
-
 snow_type:
   - fine
   - fresh
@@ -9,20 +8,17 @@ snow_temperature:
   - min: -16
     max: 0
 condition: blue
-manufactory: ""
-house: "Svecky"
-author: ""
-country: "Россия"
-
+manufactory: ''
+author: ''
+country: Россия
 tags:
   - классический стиль
   - мелкозернистый снег
   - свежий снег
-
 features:
   - cпециально для классического стиля
-
-
 updated_at: 2024-04-05
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: Svecky
