--- a/schliffs/fischer/P11-1.yaml
+++ b/schliffs/fischer/P11-1.yaml
@@ -1,30 +1,26 @@
 name: P11-1
-description:
+description: null
 description_ru: чуть холоднее чем P11-2
-website_url:
-
+website_url: null
 snow_type:
   - all
 snow_temperature:
   - min: -10
     max: 0
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - универсальный
   - средняя температура
-
 similars:
   - P11-2
   - P5-1
-
 features:
   - чуть холоднее чем P11-2
-
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
