--- a/schliffs/fischer/P5-1.yaml
+++ b/schliffs/fischer/P5-1.yaml
@@ -1,30 +1,27 @@
 name: P5-1
-description:
-description_ru: универсальная структура для любого типа снега на температуру от +5 до -10
-website_url:
-
+description: null
+description_ru: универсальная структура для любого типа снега на температуру от +5
+  до -10
+website_url: null
 snow_type:
   - all
 snow_temperature:
   - min: -10
     max: 5
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - универсальный
   - широкий диапазон
-
 similars:
-  -
-  -
-
+  - null
+  - null
 features:
   - стандартная
-
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
