--- a/schliffs/fischer/TZ1-1.yaml
+++ b/schliffs/fischer/TZ1-1.yaml
@@ -1,30 +1,26 @@
 name: TZ1-1
-description:
+description: null
 description_ru: на свежий снег при температуре ниже 0
-website_url:
-
+website_url: null
 snow_type:
   - fresh
 snow_temperature:
   - min: null
     max: 0
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - свежий снег
   - минусовая температура
-
 similars:
   - P10-3
   - S12-2
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
