--- a/schliffs/fischer/Р3-2.yaml
+++ b/schliffs/fischer/Р3-2.yaml
@@ -1,32 +1,28 @@
 name: Р3-2
-description:
+description: null
 description_ru: на старый мокрый снег при t 0 с переходом в плюс
-website_url:
-
+website_url: null
 snow_type:
   - old
   - wet
 snow_temperature:
   - min: 0
     max: null
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - старый снег
   - мокрый
   - плюсовая температура
-
 similars:
   - Р3-1
   - Р5-9
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
