--- a/schliffs/fischer/Р5-9.yaml
+++ b/schliffs/fischer/Р5-9.yaml
@@ -1,32 +1,29 @@
 name: Р5-9
-description:
-description_ru: структура для классических лыж на старый мокрый снег, температура от 0 и выше
-website_url:
-
+description: null
+description_ru: структура для классических лыж на старый мокрый снег, температура
+  от 0 и выше
+website_url: null
 snow_type:
   - old
   - wet
 snow_temperature:
   - min: 0
     max: null
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - классические лыжи
   - старый снег
   - мокрый
-
 similars:
   - Р3-2
   - P9-2
-
 features:
   - классический стиль
-
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
