--- a/schliffs/fischer/С1-1.yaml
+++ b/schliffs/fischer/С1-1.yaml
@@ -1,30 +1,26 @@
 name: С1-1
-description:
+description: null
 description_ru: все типы снега, включая свежий, температура ниже -5
-website_url:
-
+website_url: null
 snow_type:
   - all
   - fresh
 snow_temperature:
   - min: -5
     max: null
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - холодный
   - универсальный
-
 similars:
   - С12-1
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
