--- a/schliffs/fischer/С12-1.yaml
+++ b/schliffs/fischer/С12-1.yaml
@@ -1,29 +1,25 @@
 name: С12-1
-description:
+description: null
 description_ru: любой тип снега, температура от -15 до -5
-website_url:
-
+website_url: null
 snow_type:
   - all
 snow_temperature:
   - min: -15
     max: -5
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - холодный
   - универсальный
-
 similars:
   - С1-1
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
