--- a/schliffs/fischer/С8-1.yaml
+++ b/schliffs/fischer/С8-1.yaml
@@ -1,30 +1,26 @@
 name: С8-1
-description:
+description: null
 description_ru: более узкая структура для искусственного снега от 0 до -10
-website_url:
-
+website_url: null
 snow_type:
   - artificial
 snow_temperature:
   - min: -10
     max: 0
-condition: ""
-manufactory: "Fischer"
-house: "Fischer"
-author: ""
-country: "Austria"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Austria
 tags:
   - искусственный снег
   - узкая структура
-
 similars:
-  -
-  -
-
+  - null
+  - null
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Fischer
