--- a/schliffs/madshus/M61.yaml
+++ b/schliffs/madshus/M61.yaml
@@ -1,8 +1,8 @@
 name: M61
-description:
-description_ru: структура для свежего, универсального и трансформированного снега при температуре снега от -1 до -6
+description: null
+description_ru: структура для свежего, универсального и трансформированного снега
+  при температуре снега от -1 до -6
 website_url: https://www.skisport.ru/forum/commercial-offers-of-partners/104563/
-
 snow_type:
   - fresh
   - universal
@@ -11,22 +11,19 @@ snow_temperature:
   - min: -6
     max: -1
 condition: blue
-manufactory: "Madshus"
-house: "Madshus"
-author: ""
-country: "Norway"
-
+manufactory: Madshus
+author: ''
+country: Norway
 tags:
   - свежий снег
   - универсальный
   - трансформированный
-
 similars:
-  -
-
+  - null
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: Madshus
