--- a/schliffs/madshus/M63.yaml
+++ b/schliffs/madshus/M63.yaml
@@ -1,32 +1,26 @@
 name: M63
-description:
+description: null
 description_ru: стуктура для мокрого снега при температуре от 0 и теплее
-
 website_url: https://www.skisport.ru/forum/commercial-offers-of-partners/104563/
-
 snow_type:
   - wet
-
 snow_temperature:
   - min: 0
-    max: +10
+    max: 10
 condition: yellow
-manufactory: "Madshus"
-house: "Madshus"
-author: ""
-country: "Norway"
-
+manufactory: Madshus
+author: ''
+country: Norway
 tags:
   - мокрый снег
   - перемешанный
   - крупнозернистый
-
 similars:
-  -
-
+  - null
 features:
-  -
-
+  - null
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: Madshus
