--- a/schliffs/marsport/C100.yaml
+++ b/schliffs/marsport/C100.yaml
@@ -1,8 +1,7 @@
 name: C100
-description:
+description: null
 description_ru: мелкая холодная структура на мороз
 website_url: https://marsport.ru/service
-
 snow_type:
   - frozen
   - fresh
@@ -10,24 +9,21 @@ snow_temperature:
   - min: -25
     max: -10
 condition: green
-manufactory: ""
-house: "MarSport"
-author: "Alexandr Veselov "
-country: "Россия"
-
+manufactory: ''
+author: 'Alexandr Veselov '
+country: Россия
 tags:
   - перемороженный
   - холодный
-
 similars:
   - S11-3
   - B227
   - G1
   - Х20
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: MarSport
