--- a/schliffs/marsport/F1.yaml
+++ b/schliffs/marsport/F1.yaml
@@ -1,32 +1,28 @@
 name: F1
-description:
+description: null
 description_ru: стуктура для весеннего влажного снега
 website_url: https://marsport.ru/service
-
 snow_type:
   - wet
   - old
   - dirty
 snow_temperature:
   - min: -5
-    max: +5
+    max: 5
 condition: yellow
-manufactory: ""
-house: "MarSport"
-author: "Alexandr Veselov "
-country: "Россия"
-
+manufactory: ''
+author: 'Alexandr Veselov '
+country: Россия
 tags:
   - влажный
   - старый
   - грязный
-
 similars:
   - S13-5
-
 features:
-  -
-
+  - null
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: MarSport
