--- a/schliffs/marsport/SM15-5.yaml
+++ b/schliffs/marsport/SM15-5.yaml
@@ -1,8 +1,8 @@
 name: SM15-5
-description:
-description_ru: универсальная структура для среднего холода и низкой влажности при температуре от -15 до -5
+description: null
+description_ru: универсальная структура для среднего холода и низкой влажности при
+  температуре от -15 до -5
 website_url: https://marsport.ru/service
-
 snow_type:
   - fresh
   - transformed
@@ -10,22 +10,19 @@ snow_temperature:
   - min: -15
     max: -5
 condition: green
-manufactory: ""
-house: "MarSport"
-author: "Alexandr Veselov "
-country: "Россия"
-
+manufactory: ''
+author: 'Alexandr Veselov '
+country: Россия
 tags:
   - свежий снег
   - средний холод
-
 similars:
   - S12-4
   - B227
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: MarSport
