--- a/schliffs/ramsau/Pl1.yaml
+++ b/schliffs/ramsau/Pl1.yaml
@@ -1,33 +1,27 @@
 name: PL1
-description:
+description: null
 description_ru: структура на средний холод и мороз при температуре -5 и холоднее
-
 website_url: https://vk.com/video-220482174_456239484
-
 snow_type:
   - all
   - frozen
-
 snow_temperature:
   - min: null
     max: null
-condition: ""
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
-  -
-
+  - null
 similars:
   - S12-4
   - S11-3
   - B227
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-04
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
