--- a/schliffs/ramsau/S11-1.yaml
+++ b/schliffs/ramsau/S11-1.yaml
@@ -1,30 +1,26 @@
 name: S11-1
-description:
+description: null
 description_ru: сухой снег на температуре от -10 до -20
-website_url:
-
+website_url: null
 snow_type:
   - dry
 snow_temperature:
   - min: -20
     max: -10
-condition: ""
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - сухой снег
   - холодный
-
 similars:
   - S11-2
   - S11-3
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
