--- a/schliffs/ramsau/S11-2.yaml
+++ b/schliffs/ramsau/S11-2.yaml
@@ -1,8 +1,8 @@
 name: S11-2
-description:
-description_ru: структура для холодного сухого натурального снега, температура от -10 до -20
-website_url:
-
+description: null
+description_ru: структура для холодного сухого натурального снега, температура от
+  -10 до -20
+website_url: null
 snow_type:
   - dry
   - natural
@@ -11,23 +11,20 @@ snow_temperature:
   - min: -20
     max: -10
 condition: green
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - холодный
   - сухой снег
   - натуральный снег
-
 similars:
   - B227
   - C100
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
