--- a/schliffs/ramsau/S12-1.yaml
+++ b/schliffs/ramsau/S12-1.yaml
@@ -1,8 +1,7 @@
 name: S12-1
-description:
+description: null
 description_ru: свежий натуральный и искусственный снег, температура от -15 до 0
-website_url:
-
+website_url: null
 snow_type:
   - fresh
   - natural
@@ -10,24 +9,21 @@ snow_type:
 snow_temperature:
   - min: -15
     max: 0
-condition: ""
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - свежий снег
   - натуральный снег
   - искусственный снег
-
 similars:
   - S12-2
   - S12-7
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
