--- a/schliffs/ramsau/S12-12.yaml
+++ b/schliffs/ramsau/S12-12.yaml
@@ -1,30 +1,25 @@
 name: S12-12
-description:
+description: null
 description_ru: старый снег при температуре от 0 до -5
-
-website_url:
-
+website_url: null
 snow_type:
   - old
 snow_temperature:
   - min: -5
     max: 0
-condition: ""
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - старый снег
   - легкий мороз
-
 similars:
   - Р3-2
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
