--- a/schliffs/ramsau/S12-2-07.yaml
+++ b/schliffs/ramsau/S12-2-07.yaml
@@ -1,30 +1,26 @@
 name: S12-2-07
-description:
+description: null
 description_ru: для свежего снега и мягкой лыжни 0 -10
-website_url:
-
+website_url: null
 snow_type:
   - fresh
 snow_temperature:
   - min: -10
     max: 0
-condition: "мягкая лыжня"
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+condition: мягкая лыжня
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - свежий снег
   - мягкая лыжня
-
 similars:
   - S12-2
   - S12-3
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
