--- a/schliffs/ramsau/S12-3.yaml
+++ b/schliffs/ramsau/S12-3.yaml
@@ -1,30 +1,26 @@
 name: S12-3
-description:
+description: null
 description_ru: свежий снег под t -2 -6
-website_url:
-
+website_url: null
 snow_type:
   - fresh
 snow_temperature:
   - min: -6
     max: -2
-condition: ""
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - свежий снег
   - узкий диапазон
-
 similars:
   - S12-2
   - S12-4
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
