--- a/schliffs/ramsau/S12-7.yaml
+++ b/schliffs/ramsau/S12-7.yaml
@@ -1,30 +1,26 @@
 name: S12-7
-description:
+description: null
 description_ru: искусственный снег, температура от -2 до -12
-website_url:
-
+website_url: null
 snow_type:
   - artificial
 snow_temperature:
   - min: -12
     max: -2
-condition: ""
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - искусственный снег
   - широкий диапазон
-
 similars:
   - С8-1
   - S11-3
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
