--- a/schliffs/ramsau/S13-5-08.yaml
+++ b/schliffs/ramsau/S13-5-08.yaml
@@ -1,8 +1,7 @@
 name: S13-5-08
-description:
+description: null
 description_ru: влажный мелкозернистый свежий снег
-website_url:
-
+website_url: null
 snow_type:
   - wet
   - fine_grained
@@ -10,24 +9,21 @@ snow_type:
 snow_temperature:
   - min: null
     max: null
-condition: ""
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+condition: ''
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - мелкозернистый
   - влажный
   - свежий
-
 similars:
   - S13-5
   - C12-7
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
