--- a/schliffs/ramsau/V1.yaml
+++ b/schliffs/ramsau/V1.yaml
@@ -1,33 +1,27 @@
 name: V1
-description:
+description: null
 description_ru: морозная структура для натурального снега при -5 и холоднее
-
 website_url: https://vk.com/video-220482174_456239484
-
 snow_type:
   - all
   - fresh
   - frozen
   - natural
-
 snow_temperature:
   - min: -20
     max: -5
 condition: green
-manufactory: "Fischer"
-house: "Ramsau"
-author: ""
-country: "Germany"
-
+manufactory: Fischer
+author: ''
+country: Germany
 tags:
   - ramsau
-
 similars:
   - B227
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-04
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Ramsau
