--- a/schliffs/salomon/SL32.yaml
+++ b/schliffs/salomon/SL32.yaml
@@ -1,22 +1,20 @@
 name: SL32
-description: from humid natural to wet and very wet old and dirty snow, from medium to soft conditions
-description_ru: структура для влажного и очень мокрого старого снега, а также для грязного снега при средней и мягкой жесткости трассы
-
-website_url:
-
+description: from humid natural to wet and very wet old and dirty snow, from medium
+  to soft conditions
+description_ru: структура для влажного и очень мокрого старого снега, а также для
+  грязного снега при средней и мягкой жесткости трассы
+website_url: null
 snow_type:
   - wet
   - transformed
   - dirty
 snow_temperature:
   - min: 0
-    max: +15
+    max: 15
 condition: yellow
-manufactory: "Salomon"
-house: "Salomon"
-author: ""
-country: "Austria"
-
+manufactory: Salomon
+author: ''
+country: Austria
 tags:
   - влажный
   - мокрый
@@ -25,10 +23,10 @@ tags:
 similars:
   - S13-5
   - S13-4
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-01
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: Salomon
