--- a/schliffs/svecky/16-4.yaml
+++ b/schliffs/svecky/16-4.yaml
@@ -1,7 +1,6 @@
 name: 16-4
 description: Universal warm structure for high humidity conditions
 description_ru: Универсальная тёплая структура в том числе на очень влажные условия
-
 snow_type:
   - all
   - wet
@@ -9,19 +8,17 @@ snow_temperature:
   - min: -1
     max: 10
 condition: warm
-manufactory: ""
-house: "Svecky"
-author: ""
-country: "Россия"
-
+manufactory: ''
+author: ''
+country: Россия
 tags:
   - универсальная
   - тёплая
   - влажные условия
-
 features:
-  -
-
+  - null
 updated_at: 2024-04-05
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: Svecky
