--- a/schliffs/svecky/TP50.yaml
+++ b/schliffs/svecky/TP50.yaml
@@ -1,7 +1,6 @@
 name: TP50
 description: Structure for extremely wet conditions and rain
 description_ru: Для мокрых кондиций, хорошо проявила себе под проливным дождем
-
 snow_type:
   - wet
   - rain
@@ -9,19 +8,17 @@ snow_temperature:
   - min: 0
     max: 10
 condition: wet
-manufactory: ""
-house: "Svecky"
-author: ""
-country: "Россия"
-
+manufactory: ''
+author: ''
+country: Россия
 tags:
   - дождь
   - мокрый снег
   - влажные условия
-
 features:
-  -
-
+  - null
 updated_at: 2024-04-05
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: Svecky
