--- a/schliffs/svecky/VT3-2.yaml
+++ b/schliffs/svecky/VT3-2.yaml
@@ -1,7 +1,6 @@
 name: VT3-2
 description: Structure designed for fresh snow in cold conditions
 description_ru: Структура на свежий снег при холодных температурах
-
 snow_type:
   - fresh
   - new
@@ -9,18 +8,16 @@ snow_temperature:
   - min: -12
     max: -3
 condition: green
-manufactory: ""
-house: "Svecky"
-author: ""
-country: "Россия"
-
+manufactory: ''
+author: ''
+country: Россия
 tags:
   - свежий снег
   - холодная
-
 features:
-  -
-
+  - null
 updated_at: 2024-04-05
 updated_by: https://github.com/klinkin
 archived: false
+service:
+  name: Svecky
