--- a/schliffs/uventa/729.yaml
+++ b/schliffs/uventa/729.yaml
@@ -1,8 +1,9 @@
 name: 729
-description: "Universal structure for fresh and old snow, temperature range +2°C to -12°C"
-description_ru: "Универсальная структура для свежего и старого снега, температурный диапазон от +2°C до -12°C"
-website_url: "https://www.uventasport.ru/company/servis-centr/shtaynshlift/"
-
+description: Universal structure for fresh and old snow, temperature range +2°C to
+  -12°C
+description_ru: Универсальная структура для свежего и старого снега, температурный
+  диапазон от +2°C до -12°C
+website_url: https://www.uventasport.ru/company/servis-centr/shtaynshlift/
 snow_type:
   - fresh
   - old
@@ -10,23 +11,20 @@ snow_type:
 snow_temperature:
   - min: -12
     max: 2
-condition: ""
-manufactory: "Uventa"
-house: "Uventa"
-author: ""
-country: "Россия"
-
+condition: ''
+manufactory: Uventa
+author: ''
+country: Россия
 tags:
   - универсальная
   - свежий снег
   - старый снег
-
 similars:
   - N33
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-04
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Uventa
