--- a/schliffs/uventa/C110X.yaml
+++ b/schliffs/uventa/C110X.yaml
@@ -1,31 +1,29 @@
 name: C110X
-description: "Cold structure for new and transformed snow, temperature range -10°C to -20°C"
-description_ru: "Холодная структура для нового и преобразованного снега, температурный диапазон от -10°C до -20°C"
-website_url: "https://www.uventasport.ru/company/servis-centr/shtaynshlift/"
-
+description: Cold structure for new and transformed snow, temperature range -10°C
+  to -20°C
+description_ru: Холодная структура для нового и преобразованного снега, температурный
+  диапазон от -10°C до -20°C
+website_url: https://www.uventasport.ru/company/servis-centr/shtaynshlift/
 snow_type:
   - fresh
   - transformed
 snow_temperature:
   - min: -20
     max: -10
-condition: ""
-manufactory: "Uventa"
-house: "Uventa"
-author: ""
-country: "Россия"
-
+condition: ''
+manufactory: Uventa
+author: ''
+country: Россия
 tags:
   - холодная
   - новый снег
   - преобразованный снег
-
 similars:
   - 330
-
 features:
-  - ""
-
+  - ''
 updated_at: 2024-04-04
-updated_by: ""
+updated_by: ''
 archived: false
+service:
+  name: Uventa
