попытка переписать на jinja шаблоны

--- a/schliffs/uventa/729.yaml
+++ b/schliffs/uventa/729.yaml
@@ -1,4 +1,4 @@
-name: 729
+name: "729"
 description: Universal structure for fresh and old snow, temperature range +2°C to
   -12°C
 description_ru: Универсальная структура для свежего и старого снега, температурный
