--- a/schliffs/uventa/330.yaml
+++ b/schliffs/uventa/330.yaml
@@ -1,5 +1,5 @@
-name: 330
-description: null
+name: "330"
+description: "Cold structure for packed, transformed and hard snow, temperature range from -5°C to -20°C"
 description_ru: Холодная структура для утрамбованного, преобразованного и жесткого
   снега, температурный диапазон от -5°C до -20°C
 website_url: https://www.uventasport.ru/company/servis-centr/shtaynshlift
