--- a/schliffs/marsport/_meta.yaml
+++ b/schliffs/marsport/_meta.yaml
@@ -1,4 +1,4 @@
-name: Марспорт
+name: Marsport
 description: Структуры для беговых лыж от компании Марспорт
 description_ru: Кастомные структуры для беговых лыж от компании Марспорт
 
