--- a/schliffs/uventa/_meta.yaml
+++ b/schliffs/uventa/_meta.yaml
@@ -1,4 +1,4 @@
-name: Ювента Спорт
+name: Uventa
 description:
 description_ru: Кастомные структуры для беговых лыж от сервисного центра Ювента Спорт
 
