--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,9 @@ black = "^24.4.0"
 mypy = "^1.9.0"
 pre-commit = "^3.7.0"
 ruff = "^0.4.0"
+pytest = "^8.3.5"
+pytest-cov = "^6.1.1"
+
 
 [build-system]
 requires = ["poetry-core>=2.0.0,<3.0.0"]
