--- a/schliffs/ramsau/S13-5-08.yaml
+++ b/schliffs/ramsau/S13-5-08.yaml
@@ -7,9 +7,9 @@ snow_type:
   - fine_grained
   - fresh
 snow_temperature:
-  - min: null
-    max: null
-condition: ''
+  - min: -3
+    max: 3
+condition: yellow
 manufactory: Fischer
 author: ''
 country: Germany
