--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ pre-commit = "^3.7.0"
 ruff = "^0.4.0"
 pytest = "^8.3.5"
 pytest-cov = "^6.1.1"
+types-pyyaml = "^6.0.12.20250915"
 
 
 [build-system]
